# CSI-3120-group-43

./: README.md
LAB1/: dune-project  results.md
LAB1/_build/: .db  .digest-db  log
LAB1/_build/default/: LAB1.install  LAB1.opam
LAB1/_build/default/lib/: LAB1.cma  LAB1.cmxa  LAB1.cmxs
LAB1/_build/default/lib/.LAB1.objs/byte/: lAB1.cmi  lAB1.cmo  lAB1.cmt
LAB1/_build/default/lib/.LAB1.objs/native/: lAB1.cmx
LAB1/_build/default/lib/.merlin-conf/: lib-LAB1
LAB1/_build/default/test/.merlin-conf/: exe-test_LAB1
LAB1/_build/default/test/.test_LAB1.eobjs/byte/: dune__exe__Test_LAB1.cmi  dune__exe__Test_LAB1.cmti
LAB1/_build/default/test/.test_LAB1.eobjs/native/: dune__exe__Test_LAB1.cmx
LAB1/_build/install/default/lib/LAB1/: dune-package
LAB1/lib/: dune
LAB1/test/: dune
LAB2/: dune-project  results.md
LAB2/_build/: .db  .digest-db  log
LAB2/_build/default/: LAB2.dune-package  LAB2.install
LAB2/_build/default/.dune/: configurator.v2
LAB2/_build/default/lib/: LAB2.cma  LAB2.cmxa  LAB2.cmxs
LAB2/lib/: dune
LAB2/test/: dune
LAB3/: dune-project
LAB3/_build/: .db  .digest-db  log
LAB3/_build/default/: LAB3.dune-package  LAB3.install
LAB3/_build/default/.dune/: configurator
LAB3/lib/: dune
LAB3/test/: dune
LAB4/: dune-project
LAB4/_build/: .db  .digest-db  log
LAB4/_build/default/: LAB4.dune-package  LAB4.install
LAB4/lib/: dune
LAB4/test/: dune
LAB5/: TaskA.pl  TaskB.pl  TaskC.pl
LAB6/: TaskA.pl  TaskB.pl  TaskC.pl
LAB7/: TaskA.pl  TaskB.pl  TaskC.pl
LAB8/: TaskA.pl  TaskB.pl  journey.txt
(+36 files in other folders)
