(lang dune 3.16)

(name LAB1)

(generate_opam_files true)

(source
 (github rinaxosman/CSI-3120-group-43))

(authors "Rina Osman" "Alex Clements" "Sameed Jafri")

(maintainers "Rina Osman" "Alex Clements" "Sameed Jafri")

(license LICENSE)

(documentation https://github.com/rinaxosman/CSI-3120-group-43/blob/main/LAB1)

(package
 (name LAB1)
 (synopsis "CSI 3120 Group 43 Lab 1")
 (description "Lab 1 for CSI 3120[A] Programming Language Concepts")
 (depends ocaml dune)
 (tags
  (topics "programming languages" "OCaml" "labs" "CSI 3120")))